Rewrite the whole algorithm